# dipcompress

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
_01/: _01.py  image_to_raw.py
dipcompress/: __init__.py  cli.py  decoder.py  encoder.py  filters.py  format.py  huffman.py  image_io.py  lz77.py  lz77_cext.cp311-win_amd64.pyd  lz77_fast.py  rle.py
dipcompress.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dipcompress/_c_ext/: build.py  compress.c
media/: cat.raw
tests/: test_filters.py  test_huffman.py  test_image_io.py  test_lz77.py  test_rle.py  test_roundtrip.py
